--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
 
   <!-- Script links -->
   <script type="text/javascript" src="js/mustache.js"></script>
-  <script type="text/javascript" src="http://platform.linkedin.com/in.js">
+  <script type="text/javascript" src="https://platform.linkedin.com/in.js">
     api_key: 77geiokpx1xxxu
     onLoad:  falcon.onLinkedInLoad
     authorize: true
