--- a/home.html
+++ b/home.html
@@ -5,8 +5,6 @@
 
   <title>Falcon LinkedIn Demo</title>
 
-  <meta name="description" content="">
-
   <!-- Mobile-friendly viewport -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -30,6 +28,7 @@
     <!-- LinkedIn generated login button -->
     <script type="in/Login"></script>
 
+    <!-- Placeholder for profile info -->
     <div id="profile" class="hide">
     </div>
 
