not localhost anymore :)

--- a/home.html
+++ b/home.html
@@ -41,7 +41,7 @@
       <div id="description"> {{ headline }}</div>
       <div id="export">
         <img src="img/download.png"/>
-        <a href="http://localhost:8000/csv.php?headline={{ headline }}&firstName={{firstName}}&lastname= {{lastName}}&pictureUrl={{pictureUrl}}">export as CSV</a>
+        <a href="/csv.php?headline={{ headline }}&firstName={{firstName}}&lastname= {{lastName}}&pictureUrl={{pictureUrl}}">export as CSV</a>
       </div>
     </script>
 
